# gxm

./: .clang-format  CMakeLists.txt  Doxyfile  README.md
cmake/: find_dependencies.cmake  gxm_target_setup.cmake
dependencies/mathfu/: CMakeLists.txt
doc/html/: annotated.html  classes.html  dir_0fced0c4d6b0b486c90947d818923ce3.html  dir_1c5f9a77e01673e057822b92be63a20b.html  dir_220f858e81f75bf8f986903cbc1ce0f7.html  dir_2a30b166ba8310b90bc52ffcdf1e94dc.html  dir_510dc37e5ffe6baa4e0fb15032cff6b8.html  dir_5eded5b58d52aa2e2d1f49664fba20c9.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b544ac00202124e23624e0354a2b27e1.html  dir_bed8a5dbf7fde78340f17ae185ac1ccb.html  dir_c2e1d256f176268c2d230a7cafc6a778.html  dir_d7353787552671a9b9f3c12a5cb81cdb.html  dir_ddb1584578c32da96d9887c0b1effe61.html  dir_dfdded684b177f9e6de57b7f7ae52e6e.html  dir_e4df083536198e1063f83d5e86ae2e1f.html  dir_e523cf8234386cb59d54bfd3f61ecbdb.html  dir_e6196bb20de9167859d27de55961de1d.html  dir_e9927bb375e08cb91884b339554b1901.html  dir_ec01e49cceba368e2d0381e8524ebf7c.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_10.map  inherit_graph_10.md5  inherit_graph_11.map  inherit_graph_11.md5  inherit_graph_12.map  inherit_graph_12.md5  inherit_graph_13.map  inherit_graph_13.md5  inherit_graph_14.map  inherit_graph_14.md5  (+36 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  namespaces_0.js  searchdata.js
src/examples/: CMakeLists.txt  test.lua
src/examples/0_hello_world/: main.cpp
src/examples/1_empty_window/: main.cpp
src/examples/2_triangle/: main.cpp
src/gxm/: CMakeLists.txt  assert.h  bit.h  common.h  freelist.h  gfx.h  gxm.cpp  gxm.h  log.cpp  log.h  macro.h  math.h  sptr.h  throw.h  uptr.h
src/gxm.old/: CMakeLists.txt  assert.h  entry.cpp  gxm.h
src/gxm.old/base/: CMakeLists.txt  assert.h  check_compiler.cpp  check_compiler.h  log.cpp  (+9 more)
src/gxm/base/: assert.h  exception.cpp  exception.h  initer.h  log.h  unused.h
src/gxm/core/: CMakeLists.txt  freelist.cpp  freelist.h  rid.cpp  rid.h  string_utils.cpp  string_utils.h
src/gxm/driver/gpu/: blend.cpp  blend.h  buffer.h  gpu.cpp  gpu.h  program.h  shader.h  texture.h
src/gxm/driver/gpu/opengl_4/: CMakeLists.txt  gpu.cpp
src/gxm/driver/vs/: blend.cpp  blend.h  cache.h  framebuffer.h  opt.h  program.h  shader.h  texture.h  vs.cpp  vs.h
src/gxm/driver/vs/opengl_4/: CMakeLists.txt  vs.cpp
src/gxm/driver/window/: window.h
src/gxm/driver/window/glfw/: CMakeLists.txt  window.cpp
src/gxm/gfx/: gfx.cpp  glfw_entry.cpp
src/gxm/main/: CMakeLists.txt  app.cpp  app.h
src/gxm/math/: CMakeLists.txt  base.h  color.cpp  color.h  constant.h  geometry.h  macro.h  pixel_format.h  size.cpp  size.h
src/gxm/render2d/: render2d.h
src/gxm/script/lua/: engine.h
src/gxm/script_bindings/lua/: CMakeLists.txt  main_app.pkg
src/gxm/script_bindings/lua/toluapp/: CMakeLists.txt
src/tests/: CMakeLists.txt
(+169 files in other folders)
